--- a/clang/Makefile
+++ b/clang/Makefile
@@ -27,6 +27,8 @@ GnuAfterInstall       = post-install install-plist
 # It's a GNU Source project
 include ./GNUSource.make
 
+# Hack around for 7195647
+CC := /usr/bin/cc
 CXX := /usr/bin/g++
 
 # Automatic Extract & Patch
@@ -121,6 +123,9 @@ SUDO := sudo
 fast-build:
 	svn up .
 	cd .. && BUILDIT_DIR=`pwd`/build $(SUDO) /usr/local/bin/buildit -arch i386 -arch x86_64 -noinstallsrc -noinstallhdrs -nosum -noverify `pwd`/clang -noclean
+
+slow-build:
+	cd .. && BUILDIT_DIR=`pwd`/build $(SUDO) /usr/local/bin/buildit -arch i386 -arch x86_64 `pwd`/clang
 
 install-check-i386: llvm-binaries-i386
 	cd ../build/clang.roots/clang~obj/i386/tools/clang && { CLANG=/Developer/usr/bin/clang CLANGCC=/Developer/usr/libexec/clang-cc $(SUDO) make VERBOSE=0 test && echo PASS: $@ || { echo FAIL: $@; make report; } }
